<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redgrey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txv_CambiarContraseña2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="39dp"
        android:minHeight="48dp"
        android:onClick="cambiar_contra"
        android:text="@string/cambiar_contra"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#1976D2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_ingreso"
        app:layout_constraintStart_toStartOf="@+id/pass_user"
        app:layout_constraintTop_toBottomOf="@+id/pass_user" />

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="265dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="95dp"
        android:text="@string/cartel_bienvenido"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txt_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txthint_rut"
        android:inputType="textPersonName"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/pass_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Bienvenido" />

    <Button
        android:id="@+id/btn_ingreso"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:layout_marginBottom="109dp"
        android:backgroundTint="@color/black_light"
        android:onClick="login"
        android:text="@string/btn_ingresar"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_CambiarContraseña2"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/pass_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/txv_CambiarContraseña2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />
</androidx.constraintlayout.widget.ConstraintLayout>