<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/redgrey"
    tools:context=".OpcionesAdmin">

    <TextView
        android:id="@+id/txv_titulo_opad"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="106dp"
        android:text="@string/cartel_inicio_admin"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregaruser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_editaruser"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/btn_editar_delete_user"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregaruser" />

    <Button
        android:id="@+id/btn_agregaruser"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/btn_agregar_user"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_editaruser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_titulo_opad" />

</androidx.constraintlayout.widget.ConstraintLayout>