<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/redgrey"
    tools:context=".agregar_usuario">

    <TextView
        android:id="@+id/txv_edit_delete_user"
        android:layout_width="202dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_editar_delete_user"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txt_rut_edit_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_rut_edit_delete_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txthint_rut"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/txt_name_edit_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_edit_delete_user" />

    <EditText
        android:id="@+id/txt_name_edit_delete_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_text"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/txt_pass_edit_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rut_edit_delete_user" />

    <EditText
        android:id="@+id/txt_pass_edit_delete_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/spi_rol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_edit_delete_user" />

    <Spinner
        android:id="@+id/spi_rol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="12dp"
        android:entries="@array/roles"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/spi_curso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass_edit_delete_user" />

    <Spinner
        android:id="@+id/spi_curso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="18dp"
        android:entries="@array/curso"
        android:saveEnabled="false"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spi_rol" />

    <Button
        android:id="@+id/btn_edit_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/btn_editar_user"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spi_curso" />

    <Button
        android:id="@+id/btn_delete_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/btn_delete_user"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_user" />

</androidx.constraintlayout.widget.ConstraintLayout>