<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/redgrey"
    tools:context=".agregar_usuario">

    <TextView
        android:id="@+id/txv_adduser"
        android:layout_width="202dp"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="35dp"
        android:text="@string/btn_agregar_user"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txt_rut_newuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_rut_newuser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/txthint_rut"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_name_newuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_adduser" />

    <EditText
        android:id="@+id/txt_name_newuser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/user_text"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_pass_newuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rut_newuser" />

    <EditText
        android:id="@+id/txt_pass_newuser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/pass_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/spi_roles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_newuser" />

    <Spinner
        android:id="@+id/spi_roles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="27dp"
        android:entries="@array/roles"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass_newuser" />

    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/btn_agregar_user"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spi_roles" />

</androidx.constraintlayout.widget.ConstraintLayout>